# claude-scaffold

./: .flake8  .gitignore  Makefile  README.md  claude-scaffold.yaml  example-project-config.yaml  pyproject.toml  pytest.ini  requirements-dev-py38.txt  requirements-dev.txt  requirements-lock.txt  requirements.txt  run_tests.py  setup.py  test_keys.py
.github/workflows/: tests.yml
src/: __init__.py  claude_enhancer.py  claude_interactive.py  claude_processor.py  cli.py  documentation_generator.py  interactive_setup.py  project_config.py  project_creator.py  project_helpers.py  scaffold.py  task_manager.py  template_commands.py
src/claude/: __init__.py  claude_enhancer.py  claude_integration.py  claude_interactive.py  claude_interactive_enhanced.py  claude_processor.py  claude_task_queue.py
src/claude_scaffold/: __init__.py  cli.py  scaffold.py
src/claude_scaffold/claude/: __init__.py  claude_enhancer.py  claude_interactive_enhanced.py  claude_processor.py  claude_task_queue.py  prompt_loader.py  prompts.py
src/claude_scaffold/config/: __init__.py
src/claude_scaffold/core/: documentation_generator.py  project_creator.py  task_manager.py
src/claude_scaffold/interactive/: __init__.py  interactive_collectors.py  interactive_setup.py  prompts.py  qa_collector.py  retro_interactive_setup.py
src/config/: __init__.py  project_config.py
src/core/: __init__.py  documentation_generator.py  documentation_generator_old.py  project_creator.py  task_manager.py
src/interactive/: __init__.py  enhanced_setup.py  interactive.py  interactive_collectors.py  interactive_setup.py
src/templates/: __init__.py  template_base.py  template_commands.py  template_project.py  template_workflows.py  templates.py
src/utils/: __init__.py  formatters.py  icons.py  logger.py  progress.py  project_helpers.py  terminal_ui.py  ui_manager.py
test_venv/: pyvenv.cfg
tests/: README.md  conftest.py  test_claude_commands.py  test_claude_enhancer.py  test_claude_interactive.py  test_claude_processor.py  test_cli.py  test_documentation_generator.py  test_formatters.py  test_interactive_collectors.py  test_interactive_setup.py  test_project_config.py  test_project_creator.py  test_project_helpers.py  test_scaffold.py  test_task_manager.py  test_template_base.py  test_template_commands.py  test_templates.py
(+38 files in other folders)
